RESOLVED FIXED146366
[Mac] Muted videos should not automatically play to AppleTV
https://bugs.webkit.org/show_bug.cgi?id=146366
Summary [Mac] Muted videos should not automatically play to AppleTV
Eric Carlson
Reported 2015-06-26 14:17:50 PDT
A video that is muted initially is more likely to be a background video, so don't send it to the AppelTV automatically.
Attachments
Proposed patch. (7.66 KB, patch)
2015-06-26 14:35 PDT, Eric Carlson
dino: review+
Updated patch. (7.83 KB, patch)
2015-06-26 14:45 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2015-06-26 14:18:46 PDT
Eric Carlson
Comment 2 2015-06-26 14:35:53 PDT
Created attachment 255666 [details] Proposed patch.
Dean Jackson
Comment 3 2015-06-26 14:39:05 PDT
Comment on attachment 255666 [details] Proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=255666&action=review > Source/WebCore/ChangeLog:14 > + (WebCore::HTMLMediaElement::setMuted): Update media state asynchronously to multiple state > + changes to be coalesced. Typo: I think you meant "so multiple state changes can"
Eric Carlson
Comment 4 2015-06-26 14:45:49 PDT
Created attachment 255667 [details] Updated patch.
Eric Carlson
Comment 5 2015-06-26 16:35:01 PDT
Note You need to log in before you can comment on or make changes to this bug.