[Mac] Muted videos should not automatically play to AppleTV https://bugs.webkit.org/show_bug.cgi?id=146366

Reviewed by Dean Jackson.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::HTMLMediaElement): Initialize m_initiallyMuted.
(WebCore::HTMLMediaElement::scheduleDelayedAction): Support CheckMediaState.
(WebCore::HTMLMediaElement::setReadyState): Set m_initiallyMuted to true if the element is
  muted or the volume is less than 5%.
(WebCore::HTMLMediaElement::setMuted): Update media state asynchronously so multiple state
  changes can be coalesced.
(WebCore::HTMLMediaElement::mediaPlayerEngineUpdated): Ditto.
(WebCore::HTMLMediaElement::setPlaying): Ditto.
(WebCore::HTMLMediaElement::mediaPlayerCurrentPlaybackTargetIsWirelessChanged): Ditto.
(WebCore::HTMLMediaElement::removeEventListener): Ditto.
(WebCore::HTMLMediaElement::enqueuePlaybackTargetAvailabilityChangedEvent): Ditto.
(WebCore::HTMLMediaElement::updateMediaState): Update after a timer when passed UpdateMediaState::Asynchronously.
(WebCore::HTMLMediaElement::mediaState): Don't set the ExternalDeviceAutoPlayCandidate flag if
  m_initiallyMuted is true.
* html/HTMLMediaElement.h:
* html/HTMLMediaElementEnums.h:


Canonical link: https://commits.webkit.org/164449@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186016 268f45cc-cd09-0410-ab3c-d52691b4dbfc